--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "number-to-words": "^1.2.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.2",
     "react-icons": "^4.4.0",
